--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Inter",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,10 +13,11 @@ body {
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
-  padding: 40px;
+  
 }
 
 header {
+  border-bottom: 1px solid #EAEAEA;
   img {
     margin-right: 15px;
   }
@@ -25,5 +25,48 @@ header {
   h3, p {
     margin: 0;
   }
+}
+
+
+.content {
+  h1 {
+    margin: 0;
+  }
+}
+
+.card {
+  border: 1px solid #ececec;
+  padding: 20px;
+  width: 220px;
+  border-radius: 20px;
+  margin-right: 30px;
+
+
+  span {
+    font-size: 13px;
+    opacity: 0.5;
+    text-transform: uppercase;
+
+    h5 {
+      font-weight: 400;
+      font-size: 14px;
+    }
+  }
+
+  b{
+    font-size: 13px;
+  }
+}
+
+
+
+.button {
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
 }
 
