--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,16 @@ header {
   border: 1px solid #e4e4e4;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 0;
+    width: 22px;
+    height: 22px;
+    right: 15px;
+    top: 11px;
+  }
 
   input {
     border: 0;
