fixed deleted items

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,35 @@ header {
   cursor: pointer;
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p{
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover{
+      img{
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
+
 .search-block {
   border: 1px solid #e4e4e4;
   border-radius: 10px;
